--- a/app/src/main/res/layout/activity_tripcourse_record.xml
+++ b/app/src/main/res/layout/activity_tripcourse_record.xml
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:id="@+id/tripcourse_record_img_iv"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:background="@drawable/bg_base_gray_background"
@@ -42,6 +43,7 @@
                     app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
+                    android:id="@+id/tripcourse_record_img_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
