--- a/app/src/main/res/layout/activity_user_mypage.xml
+++ b/app/src/main/res/layout/activity_user_mypage.xml
@@ -3,4 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        layout="@layout/layout_topbar_base"
+        android:id="@+id/tripcourse_topbar_layout"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
