--- a/app/src/main/res/layout/activity_tripcourse.xml
+++ b/app/src/main/res/layout/activity_tripcourse.xml
@@ -13,8 +13,9 @@
     <!--메인 앨범 창-->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/tripcourse_topbar_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -76,7 +77,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-
             <!--리스트-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/looker_albumlist_recyclerview"
@@ -84,8 +84,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-                tools:listitem="@layout/item_tripcourse_card_base_empty"
-                />
+                tools:listitem="@layout/item_tripcourse_card_base_empty" />
 
         </LinearLayout>
 
