--- a/app/src/main/res/layout/activity_tripcourse.xml
+++ b/app/src/main/res/layout/activity_tripcourse.xml
@@ -10,85 +10,71 @@
         layout="@layout/layout_topbar_base"
         android:id="@+id/tripcourse_topbar_layout"/>
 
-    <!--메인 앨범 창-->
-    <ScrollView
+    <!--타이틀 바-->
+    <FrameLayout
+        android:id="@+id/tripcourse_titlebar_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tripcourse_topbar_layout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="92dp"
+        app:layout_constraintTop_toBottomOf="@id/tripcourse_topbar_layout">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_gravity="center"
+            android:src="@drawable/img_titlebar_basic"
+            android:paddingHorizontal="18dp"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="92dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:gravity="end"
+            android:layout_marginEnd="55dp"
             android:orientation="vertical">
 
-            <!--타이틀 바-->
-            <FrameLayout
-                android:id="@+id/tripcourse_titlebar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="82dp"
-                android:layout_marginVertical="15dp"
-                android:background="@drawable/img_titlebar_basic"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:layout_marginEnd="25dp"
-                    android:gravity="end"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tripcourse_titlebar_period_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="2dp"
-                        android:fontFamily="@font/notosans_kr_regular"
-                        android:includeFontPadding="false"
-                        android:text="@string/tripcourse_titlebar_date"
-                        android:textColor="@color/black"
-                        android:textSize="11sp" />
-
-                    <TextView
-                        android:id="@+id/tripcourse_titlebar_title_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/notosans_kr_bold"
-                        android:includeFontPadding="false"
-                        android:text="@string/tripcourse_titlebar_title"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-            </FrameLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/gray"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <!--리스트-->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/looker_albumlist_recyclerview"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tripcourse_titlebar_period_tv"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-                tools:listitem="@layout/item_tripcourse_card_base_empty" />
+                android:layout_marginBottom="2dp"
+                android:fontFamily="@font/notosans_kr_regular"
+                android:includeFontPadding="false"
+                android:text="@string/tripcourse_titlebar_date"
+                android:textColor="@color/black"
+                android:textSize="11sp" />
+
+            <TextView
+                android:id="@+id/tripcourse_titlebar_title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                android:text="@string/tripcourse_titlebar_title"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
-    </ScrollView>
+    </FrameLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/tripcourse_titlebar_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!--리스트-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/looker_albumlist_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        tools:listitem="@layout/item_tripcourse_card_base_empty"
+        app:layout_constraintTop_toBottomOf="@id/tripcourse_titlebar_layout"
+        />
 
     <!--카드 추가하기-->
     <TextView
