--- a/app/src/main/res/layout/item_tripcourse_card_base_empty.xml
+++ b/app/src/main/res/layout/item_tripcourse_card_base_empty.xml
@@ -5,13 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" >
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:cardCornerRadius="10dp"
-        android:elevation="20dp">
+        app:rippleColor="@color/gray">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="151dp"
             android:layout_height="235dp"
@@ -86,7 +86,7 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 
 
