--- a/app/src/main/res/layout/dialog_date.xml
+++ b/app/src/main/res/layout/dialog_date.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/dialog_base_title_tv"
+            android:id="@+id/dialog_date_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -32,36 +32,90 @@
             tools:text="Title"/>
 
         <View
-            android:id="@+id/dialog_base_view"
+            android:id="@+id/dialog_date_view"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:background="@color/gray"
-            app:layout_constraintTop_toBottomOf="@id/dialog_base_title_tv"
+            app:layout_constraintTop_toBottomOf="@id/dialog_date_title_tv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/dialog_base_message_tv"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/dialog_date_content_cl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            android:fontFamily="@font/notosans_kr_regular"
-            android:includeFontPadding="false"
-            android:gravity="center"
-            android:layout_marginTop="15dp"
-            android:drawablePadding="10dp"
-            app:layout_constraintTop_toBottomOf="@id/dialog_base_view"
+            app:layout_constraintTop_toBottomOf="@id/dialog_date_view"
+            app:layout_constraintBottom_toTopOf="@id/dialog_date_ok_btn_tv"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/dialog_base_ok_btn_tv"
-            tools:text="메세지 내용을 입력주세요."
-            app:drawableTopCompat="@null" />
+            app:layout_constraintEnd_toEndOf="parent">
+            <NumberPicker
+                android:id="@+id/dialog_date_picker_year"
+                android:layout_width="wrap_content"
+                android:layout_height="120dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="@id/dialog_date_picker_date_ll"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                android:text="년"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintStart_toEndOf="@id/dialog_date_picker_year"
+                app:layout_constraintTop_toTopOf="@id/dialog_date_picker_year"
+                app:layout_constraintBottom_toBottomOf="@id/dialog_date_picker_year"/>
+
+            <LinearLayout
+                android:id="@+id/dialog_date_picker_date_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@id/dialog_date_picker_year"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <NumberPicker
+                    android:id="@+id/dialog_date_picker_month"
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/notosans_kr_bold"
+                    android:includeFontPadding="false"
+                    android:text="월"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"/>
+
+                <NumberPicker
+                    android:id="@+id/dialog_date_picker_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/notosans_kr_bold"
+                    android:includeFontPadding="false"
+                    android:text="일"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"/>
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <TextView
-            android:id="@+id/dialog_base_ok_btn_tv"
+            android:id="@+id/dialog_date_ok_btn_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
@@ -70,7 +124,7 @@
             android:gravity="center"
             android:background="@drawable/bg_base_main_1_fill"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/dialog_base_message_tv"
+            app:layout_constraintTop_toBottomOf="@id/dialog_date_content_cl"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
