--- a/app/src/main/res/layout/activity_tripcourse_record.xml
+++ b/app/src/main/res/layout/activity_tripcourse_record.xml
@@ -36,8 +36,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:background="@drawable/bg_base_gray_background"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:scaleType="centerInside"
                     app:layout_constraintDimensionRatio="H,1:1"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
