--- a/app/src/main/res/layout/activity_tripcourse_select_country.xml
+++ b/app/src/main/res/layout/activity_tripcourse_select_country.xml
@@ -93,6 +93,7 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
+            tools:context=".src.tripcourse.TripcourseSelectCountryActivity"
             class="com.google.android.gms.maps.SupportMapFragment"
             />
     </LinearLayout>
