--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="black_cc">#CC000000</color>
     <color name="black_99">#99000000</color>
     <color name="black_66">#66000000</color>
+    <color name="black_b3">#b3000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#EDEDED</color>
     <color name="gray">#DFDFDF</color>
