fix RV item shadow

--- a/app/src/main/res/layout/item_tripcourse_card_base_empty.xml
+++ b/app/src/main/res/layout/item_tripcourse_card_base_empty.xml
@@ -8,6 +8,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="10dp"
+        android:background="@drawable/bg_base_gray_empty"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:cardCornerRadius="10dp"
