--- a/app/src/main/res/layout/activity_tripcourse_record.xml
+++ b/app/src/main/res/layout/activity_tripcourse_record.xml
@@ -108,6 +108,7 @@
                         android:text="@string/tripcourse_record_country"
                         android:textColor="@color/black"
                         android:textSize="13sp"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
