--- a/app/src/main/res/layout/activity_tripcourse_record.xml
+++ b/app/src/main/res/layout/activity_tripcourse_record.xml
@@ -136,9 +136,10 @@
 
                 <!--해시태그 선택(임시), 이후에 리사이클러뷰로 수정할 예정-->
                 <LinearLayout
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:layout_marginTop="15dp">
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -153,13 +154,15 @@
                         android:includeFontPadding="false"
                         android:layout_gravity="start|top"
                         android:paddingHorizontal="8dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/gray" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@color/gray" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
