--- a/app/src/main/res/layout/activity_user_mypage.xml
+++ b/app/src/main/res/layout/activity_user_mypage.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -30,12 +31,13 @@
             android:layout_height="91dp"
             android:background="@color/white"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="ContentDescription" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="16dp">
+            android:layout_marginStart="16dp">
 
             <ImageView
                 android:id="@+id/mypage_profile_iv"
@@ -44,7 +46,8 @@
                 android:background="@drawable/img_home_profile"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="ContentDescription" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -54,29 +57,30 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/mypage_profile_iv">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="17dp"
-                android:text="@string/user_profile_greeting"
-                android:textSize="10sp"
-                android:textColor="@color/black_b3"
-                android:fontFamily="@font/notosans_kr_bold"
-                android:includeFontPadding="false"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/mypage_profile_iv"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:text="@string/user_profile_greeting"
+                    android:textSize="10sp"
+                    android:textColor="@color/black_b3"
+                    android:fontFamily="@font/notosans_kr_bold"
+                    android:includeFontPadding="false"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/mypage_profile_iv"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="17dp"
-                android:text="OOO님"
-                android:textSize="18sp"
-                android:textColor="@color/black_b3"
-                android:fontFamily="@font/notosans_kr_bold"
-                android:includeFontPadding="false"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/mypage_profile_iv"/>
+                <TextView
+                    android:id="@+id/mypage_profile_name_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:text="OOO님"
+                    android:textSize="18sp"
+                    android:textColor="@color/black_b3"
+                    android:fontFamily="@font/notosans_kr_bold"
+                    android:includeFontPadding="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/mypage_profile_iv"/>
 
             </LinearLayout>
 
@@ -85,7 +89,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/mypage_record_cardview"
+        android:id="@+id/mypage_history_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="14dp"
@@ -98,9 +102,164 @@
             android:layout_height="59dp"
             android:background="@color/white"
             app:layout_constraintTop_toTopOf="@id/mypage_profile_view"
-            app:layout_constraintStart_toStartOf="@id/mypage_profile_view"/>
+            app:layout_constraintStart_toStartOf="@id/mypage_profile_view"
+            tools:ignore="ContentDescription" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/mypage_history_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="18dp"
+                android:text="OOO님의 추억"
+                android:textSize="10sp"
+                android:textColor="@color/black_b3"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/mypage_history_count_01_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:layout_marginStart="18dp"
+                android:text="11"
+                android:textSize="24sp"
+                android:textColor="@color/tripbook_main_1"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/mypage_history_count_02_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_marginBottom="5dp"
+                android:text="개"
+                android:textSize="10sp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                app:layout_constraintBottom_toBottomOf="@id/mypage_history_count_01_tv"
+                app:layout_constraintStart_toEndOf="@id/mypage_history_count_01_tv"/>
+
+            <View
+                android:id="@+id/mypage_history_button_view"
+                android:layout_width="134dp"
+                android:layout_height="32dp"
+                android:layout_marginEnd="18dp"
+                android:background="@drawable/bg_base_main_1_fill"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/mypage_history_button_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mypage_history"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toTopOf="@id/mypage_history_button_view"
+                app:layout_constraintBottom_toBottomOf="@id/mypage_history_button_view"
+                app:layout_constraintStart_toStartOf="@id/mypage_history_button_view"
+                app:layout_constraintEnd_toEndOf="@id/mypage_history_button_view"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/mypage_history_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:text="OOO님의 활동 히스토리"
+        android:textSize="15sp"
+        android:textColor="@color/black_b3"
+        android:fontFamily="@font/notosans_kr_bold"
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/mypage_profile_view"
+        app:layout_constraintBottom_toTopOf="@id/mypage_history_activity_title_view"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <View
+        android:id="@+id/mypage_history_activity_title_view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="54dp"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/mypage_profile_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ScrollView
+        android:id="@+id/mypage_history_scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:overScrollMode="never"
+        app:layout_constraintTop_toBottomOf="@id/mypage_history_activity_title_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:id="@+id/mypage_history_vertical_line_view"
+                android:layout_width="2dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="28dp"
+                android:orientation="vertical"
+                android:background="@color/tripbook_main_4"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <View
+                android:id="@+id/mypage_history_circle_each_view"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:background="@drawable/img_mypage_circle"
+                android:layout_marginStart="9dp"
+                app:layout_constraintTop_toTopOf="@id/mypage_history_guide_tv"
+                app:layout_constraintBottom_toBottomOf="@id/mypage_history_guide_tv"
+                app:layout_constraintStart_toStartOf="@id/mypage_history_vertical_line_view"
+                />
+
+            <TextView
+                android:id="@+id/mypage_history_guide_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="17dp"
+                android:text="최근 30일 이내의 나의 활동 내역을 확인할 수 있어요."
+                android:textSize="10sp"
+                android:textColor="@color/dark_gray"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="@id/mypage_history_circle_each_view"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
 
 
 
