Gradle update, set text size values

--- a/app/src/main/res/layout/activity_user_mypage.xml
+++ b/app/src/main/res/layout/activity_user_mypage.xml
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="17dp"
                     android:text="@string/user_profile_greeting"
-                    android:textSize="10sp"
+                    android:textSize="@dimen/text_10"
                     android:textColor="@color/black_b3"
                     android:fontFamily="@font/notosans_kr_bold"
                     android:includeFontPadding="false"
@@ -74,7 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="17dp"
-                    android:text="OOO님"
+                    android:text="@string/mypage_username_default"
                     android:textSize="18sp"
                     android:textColor="@color/black_b3"
                     android:fontFamily="@font/notosans_kr_bold"
@@ -115,8 +115,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="18dp"
-                android:text="OOO님의 추억"
-                android:textSize="10sp"
+                android:text="@string/mypage_history_title_default"
+                android:textSize="@dimen/text_10"
                 android:textColor="@color/black_b3"
                 android:fontFamily="@font/notosans_kr_bold"
                 android:includeFontPadding="false"
@@ -129,8 +129,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
                 android:layout_marginStart="18dp"
-                android:text="0"
-                android:textSize="24sp"
+                android:text="@string/mypage_history_count_default"
+                android:textSize="@dimen/text_24"
                 android:textColor="@color/tripbook_main_1"
                 android:fontFamily="@font/notosans_kr_bold"
                 android:includeFontPadding="false"
@@ -143,8 +143,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:layout_marginBottom="5dp"
-                android:text="개"
-                android:textSize="10sp"
+                android:text="@string/mypage_history_ea_default"
+                android:textSize="@dimen/text_10"
                 android:textColor="@color/black"
                 android:fontFamily="@font/notosans_kr_bold"
                 android:includeFontPadding="false"
@@ -184,7 +184,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
-        android:text="OOO님의 활동 히스토리"
+        android:text="@string/mypage_history_content_default"
         android:textSize="15sp"
         android:textColor="@color/black_b3"
         android:fontFamily="@font/notosans_kr_bold"
