--- a/app/src/main/res/menu/activity_main_left_drawer.xml
+++ b/app/src/main/res/menu/activity_main_left_drawer.xml
@@ -7,31 +7,31 @@
         android:id="@+id/menu_group1">
         <item
             android:id="@+id/menu1"
-            android:title="나의 지난 여행" />
-        <item
-            android:id="@+id/menu3"
-            android:title="모두의 여행기" />
+            android:title="@string/drawer_menu_1" />
         <item
             android:id="@+id/menu2"
-            android:title="다이어리 테마" />
+            android:title="@string/drawer_menu_2" />
+        <item
+            android:id="@+id/menu3"
+            android:title="@string/drawer_menu_3" />
     </group>
     <group
         android:id="@+id/menu_group2">
         <item
             android:id="@+id/menu4"
-            android:title="새로운 소식" />
+            android:title="@string/drawer_menu_4" />
         <item
             android:id="@+id/menu5"
-            android:title="이용방법" />
+            android:title="@string/drawer_menu_5" />
     </group>
     <group
         android:id="@+id/menu_group3">
         <item
             android:id="@+id/menu6"
-            android:title="설정" />
+            android:title="@string/drawer_menu_6" />
         <item
             android:id="@+id/menu7"
-            android:title="버전정보" />
+            android:title="@string/drawer_menu_7" />
     </group>
 
 </menu>
