[Feature] MyPastTripActivity 추가, RecyclerView 적용 및 서버 데이터 바인딩

--- a/app/src/main/res/layout/activity_main_left_drawer_header.xml
+++ b/app/src/main/res/layout/activity_main_left_drawer_header.xml
@@ -25,6 +25,7 @@
         android:text="무계획 여행러버"
         android:textSize="12sp"
         android:textColor="@color/white"
+        android:visibility="invisible"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toTopOf="@id/main_drawer_header_name_tv"
         app:layout_constraintStart_toEndOf="@id/main_drawer_header_profile_iv" />
