--- a/app/src/main/res/layout/activity_user_my_page.xml
+++ b/app/src/main/res/layout/activity_user_my_page.xml
@@ -207,9 +207,8 @@
         android:id="@+id/mypage_history_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        tools:listitem="@layout/item_user_my_page_trip_history"
         app:layout_constraintTop_toBottomOf="@id/mypage_history_activity_title_view"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_mypage_trip_history"
-        />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
