--- a/app/src/main/res/menu/activity_main_left_drawer.xml
+++ b/app/src/main/res/menu/activity_main_left_drawer.xml
@@ -6,6 +6,9 @@
     <group
         android:id="@+id/menu_group1">
         <item
+            android:id="@+id/menu0"
+            android:title="@string/drawer_menu_0" />
+        <item
             android:id="@+id/menu1"
             android:title="@string/drawer_menu_1" />
         <item
