--- a/app/src/main/res/layout/activity_tripcourse.xml
+++ b/app/src/main/res/layout/activity_tripcourse.xml
@@ -88,13 +88,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tripcourse_course_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:paddingHorizontal="15dp"
         android:scrollbars="vertical"
         android:overScrollMode="never"
-        android:scrollbarThumbVertical="@color/colorPrimary"
-        android:layout_marginTop="10dp"
+        android:scrollbarThumbVertical="@color/tripbook_main_3"
+        android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@id/tripcourse_content_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_card"/>
 
     <!-- 카드 추가하기 버튼 -->
