--- a/app/src/main/res/layout/item_line3.xml
+++ b/app/src/main/res/layout/item_line3.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
         android:src="@drawable/img_basic_line3"
-        android:layout_marginTop="30dp"
+        android:adjustViewBounds="true"
+        android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
